--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_svg: ^2.0.10+1
   flutter:
     sdk: flutter
+  go_router: ^13.2.0
+  flutter_svg: ^2.0.10+1
 
 
   # The following adds the Cupertino Icons font to your application.
