--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   pinput: ^4.0.0
   go_router: ^13.2.0
   flutter_svg: ^2.0.10+1
-  intl: ^0.19.0
+  intl: ^0.18.1
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -106,3 +108,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
+  arb_dir: lib/core/domain/intl/l10n
+  output_dir: lib/core/domain/intl/generated
