--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   go_router: ^13.2.0
   flutter_svg: ^2.0.10+1
   intl: ^0.18.1
+  bloc: ^8.1.3
+  flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
 
