--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   intl: ^0.18.1
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
+  json_annotation: ^4.8.1
+  get_it: ^7.6.7
   flutter_localizations:
     sdk: flutter
 
@@ -44,6 +46,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
 
