I made an app bar, but I need to finish the indentations. A little later I will finish the bottomNavBar and other pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,9 @@ flutter:
     - assets/svg/trailing.svg
     - assets/svg/arrow_back.svg
     - assets/svg/settings.svg
+    - assets/svg/search.svg
+    - assets/svg/unselected.svg
+
 
 
 
