the view on the advertising model has changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,8 @@ flutter:
     - assets/svg/unselected.svg
     - assets/svg/advertisement.svg
     - assets/svg/account.svg
+    - assets/svg/like.svg
+
 
 
 
