--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   pinput: ^4.0.0
   go_router: ^13.2.0
   flutter_svg: ^2.0.10+1
-  intl: ^0.18.1
+  intl: ^0.19.0
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
   json_annotation: ^4.8.1
@@ -75,6 +75,9 @@ flutter:
     - assets/image/splash/2.0x/logo.png
     - assets/image/splash/3.0x/logo.png
     - assets/image/splash/4.0x/logo.png
+
+    - assets/image/test.jpg
+
 
     - assets/svg/eye.svg
     - assets/svg/eye_off.svg
