--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   get_it: ^7.6.7
   like_button: ^2.0.5
   image_picker: ^1.1.1
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
   flutter_localizations:
     sdk: flutter
 
