ready details, ready account , 50/50 ready edit account, 50/50 unknow acc scren

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
 
     - assets/image/test.jpg
 
+    - assets/svg/email.svg
     - assets/svg/crest.svg
     - assets/svg/eye.svg
     - assets/svg/eye_off.svg
