--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.1
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  view_model_divider: ^0.0.1-1.1.beta
   flutter_localizations:
     sdk: flutter
 
@@ -81,6 +82,7 @@ flutter:
 
     - assets/image/test.jpg
 
+    - assets/svg/edit_acc.svg
     - assets/svg/email.svg
     - assets/svg/crest.svg
     - assets/svg/eye.svg
